@@ -31,6 +31,7 @@ In this document we will cover the unique value of using NetApp ASA storage syst
 
 Deployment sections of this document cover creating vVol datastores with ONTAP Tools for VMware vSphere, and observability for the modern datacenter with NetApp Cloud Insights.
 
+
 == Technology Overview
 This solution includes innovative technologies from VMware and NetApp.
 
