@@ -3,9 +3,12 @@
 |===
 | *Date* | *Solution Area* | *Description of change*
 // end::header[]
+// tag::ent-db[]
+| 04/17/2024 | Database | SnapCenter Oracle Clone Lifecycle Automation
+// end::ent-db[]
 // tag::containers[]
 | 04/16/2024 | Red Hat OpenShift Virtualization | Added new content for data protection of VMs in OpenShift Virtualization
-// end::ent-db[]
+// end::containers[]
 // tag::ent-db[]
 | 04/03/2024 | Database | New TR-4990: Quick Recovery of Oracle VLDB with Incremental Merge on ANF
 // end::ent-db[]
